Jv feat: consulta de diversidades e documentação
